# Rustle

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  index.html  result  tailwind.config.js
.github/workflows/: ci.yml  docker-publish.yml  docker.yml
backend/: Cargo.toml
backend/src/: auth.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: index.css  tailwind.css
frontend/src/app/: enter.rs  mod.rs
frontend/src/components/: app_modals.rs  modal_info.rs  navbar.rs
frontend/src/i18n/: mod.rs  zh.rs
public/: manifest.json
src/: app.rs  app_effects.rs  app_state.rs  constants.rs  index.css  tailwind.css
src/components/: app_modals.rs  grid.rs  keyboard.rs  modal_settings.rs  navbar.rs
src/constants/: word_db.rs
src/helpers/: holidays.rs  local_storage.rs  mod.rs  share.rs  tests.rs  words.rs
